Fixed jersey text alignment

--- a/static/style.css
+++ b/static/style.css
@@ -142,16 +142,20 @@ tr:last-child {
 
 .name {
     position: absolute;
-    top: 2%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .num {
     position: absolute;
-    top: 38%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.jcont {
+    position: relative;
 }
 
 h1 {
@@ -166,5 +170,4 @@ h1 {
     font-size: 90px;
     color: white;
     -webkit-text-stroke: 2px white;
-
 }
